--- a/notebooks/Report.html
+++ b/notebooks/Report.html
@@ -14381,7 +14381,7 @@ Justin Eldridge, Section A10</p>
 <h1 id="Works-Cited">Works Cited<a class="anchor-link" href="#Works-Cited">&#182;</a></h1><blockquote><ol>
 <li><p>Nicolas Kourtelris, Ilias Leontiadis, Michael Sirivianos, Gianluca Stringhini, and Jeremy Blackburn. 2017. The web centipede: understanding how web communities influence each other through the lens of mainstream and alternative news sources. In Proceedings of the 2017 Internet Measurement Conference (IMC '17). Association for Computing Machinery, New York, NY, USA, 405–417. DOI:<a href="https://doi.org/10.1145/3131365.3131390">https://doi.org/10.1145/3131365.3131390</a></p>
 </li>
-<li><p>“Iffy+ MIS/Disinfo Sites.” Iffy.news, 20 June 2021, <a href="https://iffy.news/iffy-plus/">https://iffy.news/iffy-plus/</a></p>
+<li><p>Iffy+ MIS/disinfo sites. Iffy.news. (2021, June 20). Retrieved February 3, 2022, from <a href="https://iffy.news/iffy-plus/">https://iffy.news/iffy-plus/</a></p>
 </li>
 </ol>
 </blockquote>
